- adding mapping for UTF8MB4 charset introduced with 5.5.3 (bug #58244)
- return default values for text columns as quoted (bug #58167)
- fixed our DDEX code so that dragging tables from server explorer onto a typed data set
  preserves the table name (bug #57894)
- fixed ReadFieldLength to return a long so bigint autoincrement columns can work (bug #58373)

Version 6.3.5
- Fix installer bug related to .NET FW 4.0 (bug #56580)
- Added MySqlHelper.ExecuteReader that takes an external connection and array of paramters (bug #56755)
- fixed database methods in EF4 provider services to use the database name from the connection string (bug #56589)
- fixed problem with using bit parameters as output (bug #56756)
- Handle MySqlCommand.CommandTimeout = 0 properly (Bug #57265)
- Do not call AcceptChanged on tables in MySqlDataAdapter.Update(),
  but on individual rows (Bug #57092)
- fixed MySqlCommand.Clone so that the default command timeoout functionality is not disabled when
  you clone a command (bug #56806)

Version 6.3.4
- Fix authorization popup after modifying stored procedure in VS (Bug #44715)
- Dispose EventLog after use in MySql.Web.dll provider classes, to avoid wasting resources
  (Bug #55793)
- Fix calculation of lockAge in SessionProvider (Bug #55701)
- Handle cases where server returns unparsable (out-of-range) double values
  (Bug#55644)
- Fix DataAdapter.Update() slowdown due to many superfluous DataTable.AcceptChanges() calls (Bug #55609)
- fixed visual studio plugin so that stored procedure editing works on older versions of MySQL (bug #55170)
- Improve performance of write operaitons (e.g insert) if compression is enabled (Bug #48243)
- Changed timestamp columns in entity framework models to be DateTime objects instead of DateTimeOffset (bug #52550)

Version 6.3.3 (beta 2)
- fix "There is already an open DataReader..." after exceptions in DataReader.Close()
 (bug#55558)
- Improve performance of MySqlHelper.EscapeString()